Edcity comments fix

--- a/index.html
+++ b/index.html
@@ -684,6 +684,8 @@
 						<img class="a3-line-tl-br line" src="img/line-tl-br.png" alt="">
 						<img class="a3-line-tr-bl line" src="img/line-tr-bl.png" alt="">
 						<img class="a4-line-tr-bl line" src="img/line-tr-bl.png" alt="">
+						<img class="a4-line-tl-br line" src="img/line-tl-br.png" alt="">
+						<img class="a5-line-tr-bl line" src="img/line-tr-bl.png" alt="">
 					</div>
 					<div class="dropzones-outer clearfix">
 						<ol id="dropzone-{{$index}}" v-repeat="dropPool: question.dropPools" class="dropzone exercise__answer-list type-{{dropPool.type}}" v-attr="data-text: dropPool.text">
